# ROS-2-Learning-Assistant

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  Updates.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  run_backend.py  tsconfig.json
backend/: .env.example  __init__.py  config.py  llm.py  main.py  prompts.py  rag.py  schemas.py  state.py
backend/routers/: __init__.py  chat.py  explain.py  health.py  quiz.py  roadmap.py
frontend/: App.css  App.tsx  index.css
frontend/components/: AnimatedEdge.tsx  ChatPanel.tsx  DetailPanel.tsx  Markdown.tsx  QuizPanel.tsx  RoadmapPanel.tsx  Ros2Node.tsx
frontend/data/: scenarios.ts
frontend/hooks/: useAiExplain.ts  useChat.ts  useQuiz.ts  useRoadmap.ts
frontend/types/: roadmap.ts  ros2.ts
scripts/: build_vector_index.py  clean_rag_database.py  crawl_ros2_kilted.py  crawl_ros2_tutorial.py  query_rag.py  rag_common.py
tests/: conftest.py  requirements_test.py  test_api_integration.py  test_retrieval_logic.py  test_security.py  测试报告.md
